# egovault

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  PROJECT-STATUS.md  README.md  SECURITY.md  SESSION-CONTEXT.md  _index.md  _status.md  capture.py  config.yaml.example  idee.md  pyproject.toml
.claude/: settings.json
.meta/: GUIDELINES.md  research-themes.yaml
.timestamps/: v0.1.0.hash  v0.1.0.ots  v0.2.0.hash  v0.2.0.ots  v0.3.0.hash  v0.3.0.ots
api/: main.py  models.py
cli/: main.py  output.py
config/: install.yaml.example  system.yaml  user.yaml.example
core/: config.py  context.py  errors.py  logging.py  sanitize.py  schemas.py  security.py  tokens.py  uid.py
docs/: AMELIORATIONS.md  BRAND.md  DOCUMENTATION.md  FOUNDATION.md  FUTURE-WORK.md  GETTING-STARTED.md  LLM.md  MCKINSEY-STRATEGIST-AGENT.md  PRODUCT-AUDIT.md  STATE-OF-THE-ART.md  TIMESTAMPS.md  VISION-KNOWLEDGE-COMPILER.md  VISION.md  mcp-setup.md
infrastructure/: context.py  db.py  embedding_provider.py  llm_provider.py  vault_db.py  vault_writer.py
mcp/: server.py
scripts/: _config.py  check_consistency.py  check_duplicates.py  check_git_author.py  clean_sources.py  force_git_author.py  import_decentralisation.py  init_vault.py  migrate_rename.py  queue.py  reembed.py  setup.ps1  setup.sh  timestamp-release.py  timestamp-release.sh  update_index.py  vault_status.py
tests/: conftest.py  test_check_consistency.py  test_clean_sources.py  test_import_decentralisation.py  test_update_index.py  test_vault_status.py
workflows/: ingest.py  ingest_audio.py  (+2 more)
(+241 files in other folders)
