[project]
name = "egovault"
version = "2.0.0"
description = "EgoVault — personal memory infrastructure"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sqlite-vec>=0.1.0",
    "requests>=2.33",
    "faster-whisper>=1.2.0",
    "yt-dlp>=2026.3.0",
    "youtube-transcript-api>=1.2",
    "mcp[cli]>=1.0",
    "anthropic>=0.40",
    "pypdf>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.27",
]

[project.scripts]
egovault = "cli.main:app"

[tool.setuptools]
packages = ["api", "cli", "core", "infrastructure", "tools", "workflows", "mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
